--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
   "name": "bulma",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jgthms/bulma.git"
+    "url": "git+https://github.com/CyCoreSystems/bulma.git"
   },
   "scripts": {
     "build": "npm run build-clean && npm run build-sass && npm run build-autoprefix",
