--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "_from": "bulma",
-  "_id": "bulma@0.6.0",
+  "_id": "bulma@0.6.0-cc1",
   "_inBundle": false,
   "_integrity": "sha1-T1xd5YKBDRGqDPsfMK7Ip5LQ2Sw=",
   "_location": "/bulma",
